@@ -74,6 +74,11 @@ class K3bDirItem : public K3bDataItem
   void setLocalPath( const QString& p ) { m_localPath = p; }
   QString localPath() const { return m_localPath; }
 
+  /**
+   * \reimplemented
+   */
+  bool writeToCd() const;
+
  private:
   /**
    * this recursivly updates the size of the directories.
