@@ -9,7 +9,7 @@ lib_LTLIBRARIES = libk3bdevice.la
 libk3bdevice_la_LIBADD = $(LIB_KIO) $(RESMGR_LIB) $(CAM_LIB) $(HAL_DBUS_LIBS)
 
 # lib version 2 for K3b 0.11.x 
-libk3bdevice_la_LDFLAGS = $(all_libraries) -version-info 2:0:0 -no-undefined
+libk3bdevice_la_LDFLAGS = $(all_libraries) -version-info 2:1:0 -no-undefined
 
 if include_HAL
 libk3bdevice_la_SOURCES = k3bdevice.cpp k3bdevice_mmc.cpp k3bscsicommand.cpp \
